--- a/src/assets/scss/_partials/_typography.scss
+++ b/src/assets/scss/_partials/_typography.scss
@@ -1,8 +1,12 @@
 body {
-    font-family: "Martel Sans";
+    font-family: "Cabin Condensed";
 }
 
 h1 {
     font-family: "Bebas Neue";
-    font-size: 3em;
+    font-size: 3.2em;
+}
+
+input {
+    font-family: inherit;
 }
