Milestone 4 - stilizzazione header

--- a/src/assets/scss/_partials/_variables.scss
+++ b/src/assets/scss/_partials/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #e50914;
+$secondary-color: #fff;
 
 :root{
     --primary-color: #{$primary-color};
+    --secondary-color: #{$secondary-color};
 }
