--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,3 +6,12 @@
 .container {
     @include my-container(87.5rem);
 }
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.img {
+    height: 100%;
+}
