Milestone 4 - testo partenza e lista vuota

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,3 +15,9 @@ img {
 .img {
     height: 100%;
 }
+
+.center-flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
