--- a/src/assets/scss/_partials/_typography.scss
+++ b/src/assets/scss/_partials/_typography.scss
@@ -2,9 +2,21 @@ body {
     font-family: "Cabin Condensed";
 }
 
-h1 {
+.info-box, h1, h2 {
     font-family: "Bebas Neue";
+}
+
+h1 {
     font-size: 3.2em;
+}
+
+h2 {
+    font-size: 2.5em;
+    text-shadow: 0 0 8px var(--primary-color);
+}
+
+.info-box {
+    text-shadow: 0 0 3px var(--primary-color);
 }
 
 input {
