--- a/src/assets/scss/_partials/_typography.scss
+++ b/src/assets/scss/_partials/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Cabin Condensed";
+    font-family: "Roboto";
 }
 
 .info-box, h1, h2 {
@@ -13,6 +13,11 @@ h1 {
 h2 {
     font-size: 2.5em;
     text-shadow: 0 0 8px var(--primary-color);
+}
+
+.og-title,
+.overview {
+    font-size: 0.9em;
 }
 
 .info-box {
